...

                <EditText
                    android:id="@+id/txt_zx1"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_zx2"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_zx3"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e1x1"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e1x2"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e1x3"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_be1"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e2x1"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e2x2"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e2x3"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_be2"

                    android:layout_width="@dimen/longueur_edittext"
...

                <EditText
                    android:id="@+id/txt_e3x1"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e3x2"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_e3x3"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...

                <EditText
                    android:id="@+id/txt_be3"
                    android:layout_width="@dimen/longueur_edittext"
                    android:layout_height="@dimen/largeur_edittext"
...
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="Proceder au calcul" />


...
