...

            <TextView
                android:id="@+id/e1x1"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/e1"
...

            <TextView
                android:id="@+id/e1x2"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/e1x1"
...

            <TextView
                android:id="@+id/p1e1"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/e1x2"
...

            <TextView
                android:id="@+id/p2e1"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/p1e1"
...
                />
            <TextView
                android:id="@+id/p3e1"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/p2e1"
...

            <TextView
                android:id="@+id/be1"
                android:layout_below="@+id/img1"
                android:layout_toRightOf="@+id/p3e1"
...

            <TextView
                android:id="@+id/e2x1"
                android:layout_below="@+id/e1"
                android:layout_toRightOf="@+id/e2"
...

            <TextView
                android:id="@+id/e2x2"
                android:layout_below="@+id/e1x2"
                android:layout_toRightOf="@+id/e2x1"
...

            <TextView
                android:id="@+id/p1e2"
                android:layout_below="@+id/p1e1"
                android:layout_toRightOf="@+id/e2x2"
...

            <TextView
                android:id="@+id/p2e2"
                android:layout_below="@+id/p2e1"
                android:layout_toRightOf="@+id/p1e2"
...
                />
            <TextView
                android:id="@+id/p3e2"
                android:layout_below="@+id/p3e1"
                android:layout_toRightOf="@+id/p2e2"
...

            <TextView
                android:id="@+id/be2"
                android:layout_below="@+id/be1"
                android:layout_toRightOf="@+id/p3e2"
...

            <TextView
                android:id="@+id/e3x1"
                android:layout_below="@+id/e2x1"
                android:layout_toRightOf="@+id/e3"
...

            <TextView
                android:id="@+id/e3x2"
                android:layout_below="@+id/e2x2"
                android:layout_toRightOf="@+id/e3x1"
...

            <TextView
                android:id="@+id/p1e3"
                android:layout_below="@+id/p1e2"
                android:layout_toRightOf="@+id/e3x2"
...

            <TextView
                android:id="@+id/p2e3"
                android:layout_below="@+id/p2e2"
                android:layout_toRightOf="@+id/p1e3"
...
                />
            <TextView
                android:id="@+id/p3e3"
                android:layout_below="@+id/p3e2"
                android:layout_toRightOf="@+id/p2e3"
...

            <TextView
                android:id="@+id/be3"
                android:layout_below="@+id/be2"
                android:layout_toRightOf="@+id/p3e3"
...

            <TextView
                android:id="@+id/zx1"
                android:layout_below="@+id/e3"
                android:layout_toRightOf="@+id/Z"
...

            <TextView
                android:id="@+id/zx2"
                android:layout_below="@+id/e3x2"
                android:layout_toRightOf="@+id/zx1"
...

            <TextView
                android:id="@+id/p1z"
                android:layout_below="@+id/p1e3"
                android:layout_toRightOf="@+id/zx2"
...

            <TextView
                android:id="@+id/p2z"
                android:layout_below="@+id/p2e3"
                android:layout_toRightOf="@+id/p1z"
...
                />
            <TextView
                android:id="@+id/p3z"
                android:layout_below="@+id/p3e3"
                android:layout_toRightOf="@+id/p2z"
...

            <TextView
                android:id="@+id/bz"
                android:layout_below="@+id/be3"
                android:layout_toRightOf="@+id/p3z"
...
